--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ nav{
     top: 0;
     left: 0;
     right: 0;
-    background-color: #2b5043cc;
+    background-color: rgba(43, 80, 67, 0.8);
 }
 nav::after {
     content: '';
@@ -51,13 +51,22 @@ nav a{
 nav a:hover{
     background-color: #1c1d21;
     color: white
-
 }
 nav a:focus{
     outline: 2px solid #F2C14E;
 }
 .menu{
     position: relative;
+    color: #F2C14E;
+    text-decoration: none;
+    padding: 20px;
+    display: block;
+    transition: 0.5s;
+    transition-property: background-color;
+}
+.menu:hover{
+    background-color: rgba(43, 80, 67, 0.2);
+    color: white
 }
 nav .menu:hover .submenu{
     display: contents;
@@ -78,10 +87,10 @@ nav .submenu a:hover{
 
 }
 nav .site-name{
-    margin-left: 25%;
+    margin-left: 10%;
     color: #F2C14E;
     text-decoration: none;
-    padding: 20px;
+    padding-top: 18px;
     display: block;
     font-size: 1.4rem;
 }
@@ -93,9 +102,33 @@ header h1{
     bottom:0;
     right:10px;
     color: #1c1d21;
-    text-shadow: 2px 2px 5px #5fad56;
     margin-right:20px;
     font-size: 2rem;
+}
+.main-wrapp{
+    margin: 20px 20px 20px 25px;
+    display: flex;
+    flex-wrap: wrap;
+
+    align-items: center;
+ 
+}
+main h1{
+    text-align: center;
+    margin-top: 5px;
+}
+main h1 span{
+    color: #F2C14E;
+    padding: 0 5px;
+    background-color: rgb(43, 80, 67);
+    border-radius: 5px;
+    -webkit-box-decoration-break: clone;
+    -o-box-decoration-break: clone;
+    box-decoration-break: clone;
+    border: 2px solid rgb(43, 80, 67);
+}
+main p{
+    line-height: 2;
 }
 .sticky{
     position:-webkit-sticky; 
@@ -152,43 +185,34 @@ footer span{
     width:88px;
     height:31px
 }
+
 /* Site separate*/
 /*index*/
-.main-wrapp{
-    margin: 40px;
-    display: flex;
-    flex-wrap: wrap;
+
+.article-wrapper{
+  min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: justify;
+  border-bottom: 3px solid #5fad56;
+  align-items: center;
 }
-main h1{
-    text-align: center;
-    margin-top: 5px;
-}
-main h1 span{
-    color: #F2C14E;
-    padding: 0 5px;
-    background-color: rgb(43, 80, 67);
-    border-radius: 5px;
-    -webkit-box-decoration-break: clone;
-    -o-box-decoration-break: clone;
-    box-decoration-break: clone;
-    border: 2px solid rgb(43, 80, 67);
+.article-wrapper{
+    margin: auto;
 }
 .article-wrapper h2{
+    width:100%;
+    height:56px;
     color: rgb(43, 80, 67);
     padding-bottom: 2px;
     border-bottom: 1px solid #2b5043cc;
-}
-main p{
-    line-height: 2;
-}
-.article-wrapper{
-  text-align: justify;
-  border-bottom: 3px solid #5fad56;
-  max-width: 350px;
-  margin-right: 20px;
+    text-align: center;
+    bottom: 0;
 }
 .article-wrapper .details{
-    margin-top: 0px;
+    margin-top: auto;
+    text-align: center;
 }
 .article-wrapper .details a{
     display: inline-block;
@@ -204,15 +228,54 @@ main p{
     border: 2px solid rgb(43, 80, 67);
     cursor: pointer;
 }
+.article-wrapper .details a:hover{
+    background-color: #1c1d21;
+    color: white;
+}
+.picture{
+    height: 100px; 
+}
+.picture img{
+    height: 100%;
+    width: auto;
+}
+.article-content{
+    height: 300px;
+}
+.next-page{
+    margin: auto;
+}
+.more{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.more ul{
+    margin: auto;
+    list-style: none;
+}
+.more ul li{
+    float: left;
+    padding: 1rem;
+}
 /*what*/
-
-/*Up to 400px*/
-@media (max-width:899px) and (min-width:400px){
-/*Test background*/
+.article-what.details{
+    width: 100%;
+    display: block;
+}
+/*Up to 500px*/
+@media (max-width:899px) and (min-width:500px){
+/*Test background
     body{
         background-color: darkcyan;
-    }
+    }*/
 /*All site*/
+    .small-menu{
+        display: none
+    }
+    .big-menu{
+        display: block;  
+    }
     footer{
         background: rgba(43, 80, 67, 0.9);
         padding: 20px 0;
@@ -224,32 +287,44 @@ main p{
         color: #5fad56;
         border-top: none;
     }
+/*Index*/
+.main-wrapp{
+    margin: 0;
+    align-items: stretch;
+}
+/*Selecting all of odd article and set 5% margin right
+.article-wrapper:nth-of-type(odd){
+    border-bottom: 3px solid #5fad56;
+    max-width: 45%;
+    margin-right: 10px;
+  }
+  /*selecting all of even article and set margin 0
+  .article-wrapper:nth-of-type(even){
+    border-bottom: 3px solid #5fad56;
+    max-width: 45%;
+    margin-right: 0;
+  }*/
+  .article-wrapper{
+    border-bottom: 3px solid #5fad56;
+    max-width: 45%;
+    margin: 0 5px;
+  }
+  .article-wrapper img{
+      max-width: 200px;
+  }
 }
 /*up to 900px*/
 @media (min-width: 900px){
 /*All site big*/
+    .small-menu{
+        display: none
+    }
     .big-menu{
-        display: block;
-        
+        display: block; 
     }
     header h1{
         font-size: 3rem;
     }
-    .small-menu{
-        display: none
-    }
-    footer{
-        background: rgba(43, 80, 67, 0.9);
-        padding: 20px 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-    footer span{
-        color: #5fad56;
-        border-top: none;
-    }
-/*index big*/
     .main-wrapp{
         display: flex;
         flex-direction: row;
@@ -267,13 +342,24 @@ main p{
     main p{
         line-height: 2;
     }
+    footer{
+        background: rgba(43, 80, 67, 0.9);
+        padding: 20px 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    footer span{
+        color: #5fad56;
+        border-top: none;
+    }
+/*index big*/
+
     .article-wrapper{
       border-bottom: 3px solid #5fad56;
-      max-width: 100%;
+      max-width: 30%;
     }
-    .article-wrapper .details{
-        margin-top: 0px;
-    }
+
     .article-wrapper .details a{
         display: inline-block;
         background: #2b5043cc;
@@ -288,6 +374,7 @@ main p{
         border: 2px solid rgb(43, 80, 67);
         cursor: pointer;
     }
+
 /*what*/
 /*The End!*/
 }
