--- a/style/style.css
+++ b/style/style.css
@@ -105,13 +105,11 @@ header h1{
     margin-right:20px;
     font-size: 2rem;
 }
-.main-wrapp{
+.main-wrapp, .what-container{
     margin: 20px 20px 20px 25px;
     display: flex;
     flex-wrap: wrap;
-
     align-items: center;
- 
 }
 main h1{
     text-align: center;
@@ -197,9 +195,7 @@ footer span{
   text-align: justify;
   border-bottom: 3px solid #5fad56;
   align-items: center;
-}
-.article-wrapper{
-    margin: auto;
+  margin: auto;
 }
 .article-wrapper h2{
     width:100%;
@@ -216,7 +212,7 @@ footer span{
 }
 .article-wrapper .details a{
     display: inline-block;
-    background: #2b5043cc;
+    background: rgba(43, 80, 67, 0.8);
     padding: 5px 10px;
     color: #F2C14E;
     text-decoration: none;
@@ -233,7 +229,7 @@ footer span{
     color: white;
 }
 .picture{
-    height: 100px; 
+    height: 250px; 
 }
 .picture img{
     height: 100%;
@@ -259,9 +255,53 @@ footer span{
     padding: 1rem;
 }
 /*what*/
-.article-what.details{
+.what-wrap{
+    margin:20px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 3px solid #5fad56;
+}
+.what-container{
+    margin: 0;
+}
+.what-container h2{
+    width:100%;
+    height:56px;
+    color: rgb(43, 80, 67);
+    padding-bottom: 2px;
+    border-bottom: 1px solid #2b5043cc;
+    text-align: center;
+    bottom: 0;
+}
+.what-wrap .picture{
+    margin: 0 auto;
+    align-content: center;
+}
+.side-menu{
+    background:  rgba(43, 80, 67, 0.8);
+}
+.side-menu ul li{
+    margin: 15px 0;
+}
+.side-menu ul{
+    list-style-type: none;
+    margin-left: 5px;
+    padding: 10px 15px;
+}
+.side-menu a{
+    padding: 10px;
+    margin:5px 0;
+    color: #F2C14E;
+    text-decoration: none;
     width: 100%;
-    display: block;
+}
+.side-menu a:hover{
+    background-color: #1c1d21;
+    color: white;
+}
+.sticky-menu{
+    position: sticky;
+    top: 0;
 }
 /*Up to 500px*/
 @media (max-width:899px) and (min-width:500px){
@@ -288,31 +328,77 @@ footer span{
         border-top: none;
     }
 /*Index*/
-.main-wrapp{
-    margin: 0;
-    align-items: stretch;
+    .main-wrapp{
+        margin: 0;
+        align-items: stretch;
+    }
+    .article-wrapper{
+        border-bottom: 3px solid #5fad56;
+        max-width: 45%;
+        margin: 0 5px;
+    }
+    .article-wrapper img{
+        max-width: 200px;
+    }
+/* what */
+    .site-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100vw;
+    }
+    .what-container{
+        max-width: 83vw;
+    }
+    article h2{
+        text-align: center;
+        border-bottom: 1px solid #5fad56;
+    }
+    .what-wrap{
+        display: flex;
+        flex-direction: row;
+    }
+    .what-wrap .picture{
+        margin: 0 5px;
+        flex: 1;
+        max-width: 250px;
+    }
+    .what-wrap .picture img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .what-wrap .article-content{
+        overflow-x: auto;
+        flex: 1;
+    }
+    .side-menu{
+        background:  rgba(43, 80, 67, 0.8);
+        height: 100%;
+        width: 17vw;
+        position: relative;
+    }
+    .side-menu ul{
+        list-style-type: none;
+        padding: 10px 5px;
+        text-align: center;
+
+    }
+    .side-menu ul li{
+        padding: 10px 0;
+        border-bottom: 1px dashed #5fad56;
+    }
+    .side-menu a{
+        color: #F2C14E;
+        text-decoration: none;
+        margin: 5px auto; 
+        padding: 5px;    
+    }
+    .what-sticky{
+        display: none;
+    }
 }
-/*Selecting all of odd article and set 5% margin right
-.article-wrapper:nth-of-type(odd){
-    border-bottom: 3px solid #5fad56;
-    max-width: 45%;
-    margin-right: 10px;
-  }
-  /*selecting all of even article and set margin 0
-  .article-wrapper:nth-of-type(even){
-    border-bottom: 3px solid #5fad56;
-    max-width: 45%;
-    margin-right: 0;
-  }*/
-  .article-wrapper{
-    border-bottom: 3px solid #5fad56;
-    max-width: 45%;
-    margin: 0 5px;
-  }
-  .article-wrapper img{
-      max-width: 200px;
-  }
-}
+
+
 /*up to 900px*/
 @media (min-width: 900px){
 /*All site big*/
@@ -354,15 +440,13 @@ footer span{
         border-top: none;
     }
 /*index big*/
-
     .article-wrapper{
       border-bottom: 3px solid #5fad56;
       max-width: 30%;
     }
-
     .article-wrapper .details a{
         display: inline-block;
-        background: #2b5043cc;
+        background: rgba(43, 80, 67, 0.8);
         padding: 5px 10px;
         color: #F2C14E;
         text-decoration: none;
@@ -374,8 +458,38 @@ footer span{
         border: 2px solid rgb(43, 80, 67);
         cursor: pointer;
     }
-
-/*what*/
+    /*what*/
+    .site-container{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .what-container{
+        font-size: 1.5rem;
+    }
+    .what-wrap{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: stretch;
+    }
+    .side-menu{
+        background-color:  rgba(43, 80, 67, 0.8);
+        height: 99%;
+        text-align: center;
+    }
+    .side-menu ul li{
+        list-style-type: none;
+        margin-left: 5px;
+        padding: 10px 15px;
+        border-bottom: 1px dashed #5fad56;
+    }
+    .side-menu a{
+        color: #F2C14E;
+        text-decoration: none;
+    }
+    .what-sticky{
+        display: none;
+    }
 /*The End!*/
 }
 /*Welcome to the nowhere*/
