--- a/style/style.css
+++ b/style/style.css
@@ -276,6 +276,7 @@ footer span{
 .what-wrap .picture{
     margin: 0 auto;
     align-content: center;
+    height: auto;
 }
 .side-menu{
     background:  rgba(43, 80, 67, 0.8);
@@ -338,7 +339,8 @@ footer span{
         margin: 0 5px;
     }
     .article-wrapper img{
-        max-width: 200px;
+        max-width: 100%;
+        height: 100%;
     }
 /* what */
     .site-container{
@@ -365,7 +367,7 @@ footer span{
     }
     .what-wrap .picture img{
         max-width: 100%;
-        max-height: 100%;
+        height: auto;
     }
     .what-wrap .article-content{
         overflow-x: auto;
