--- a/style/style.css
+++ b/style/style.css
@@ -20,83 +20,29 @@ header{
     position: relative;
     height: 300px;
 }
-nav{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(43, 80, 67, 0.8);
+.bg-green{
+    background-color: rgba(43, 80, 67, 0.8) !important;
 }
-nav::after {
-    content: '';
-    clear: both;
-    display: table;
+.nav-item{
+    display: block;
+    padding: .5rem;
 }
-nav ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-nav>ul>li{
-    float: left;
-}
-nav a{
+nav .nav-recycle{
     color: #F2C14E;
     text-decoration: none;
-    padding: 20px;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
     display: block;
+    padding: .5rem 1rem;
     transition: 0.5s;
     transition-property: background-color;
 }
-nav a:hover{
+ nav .nav-recycle:hover{
     background-color: #1c1d21;
-    color: white
-}
-nav a:focus{
-    outline: 2px solid #F2C14E;
-}
-.menu{
-    position: relative;
-    color: #F2C14E;
-    text-decoration: none;
-    padding: 20px;
-    display: block;
-    transition: 0.5s;
-    transition-property: background-color;
-}
-.menu:hover{
-    background-color: rgba(43, 80, 67, 0.2);
-    color: white
-}
-nav .menu:hover .submenu{
-    display: contents;
-    transition: 0.5s;
-}
-nav .submenu{
-    position: absolute;
-    background-color: rgba(77, 140, 120, 1);
-    width:100vw;
-    display: none;
-}
-nav .submenu a{
-    padding: 10px 5px;
-}
-nav .submenu a:hover{
-    background-color: #1c1d21;
-    color: white
-
-}
-nav .site-name{
-    margin-left: 10%;
-    color: #F2C14E;
-    text-decoration: none;
-    padding-top: 18px;
-    display: block;
-    font-size: 1.4rem;
-}
-.big-menu{
-    display: none;
-}
+    color: white;
+    cursor: pointer;
+ }
 header h1{
     position: absolute;
     bottom:0;
@@ -199,7 +145,7 @@ footer span{
 }
 .article-wrapper h2{
     width:100%;
-    height:56px;
+    height:5rem;
     color: rgb(43, 80, 67);
     padding-bottom: 2px;
     border-bottom: 1px solid #2b5043cc;
@@ -311,12 +257,6 @@ footer span{
         background-color: darkcyan;
     }*/
 /*All site*/
-    .small-menu{
-        display: none
-    }
-    .big-menu{
-        display: block;  
-    }
     footer{
         background: rgba(43, 80, 67, 0.9);
         padding: 20px 0;
@@ -404,12 +344,6 @@ footer span{
 /*up to 900px*/
 @media (min-width: 900px){
 /*All site big*/
-    .small-menu{
-        display: none
-    }
-    .big-menu{
-        display: block; 
-    }
     header h1{
         font-size: 3rem;
     }
